scss/core/_code.scss
@if $enable-code {
    // Inline code
    @if $enable-code-code {
        code {
            padding: $code-padding-y $code-padding-x;
            @include font-size($code-font-size);
            color: $code-color;
            word-break: break-word;
            background-color: $code-bg;
            @include border-radius($code-border-radius);

            // Inherit link color when inside anchors to avoid mis-matched underline
            a > & {
                color: inherit;
            }
        }
    }

    // User input typically entered via keyboard
    @if $enable-code-kbd {
        kbd {
            padding: $kbd-padding-y $kbd-padding-x;
            @include font-size($kbd-font-size);
            color: $kbd-color;
            background-color: $kbd-bg;
            @include border-radius($kbd-border-radius);
            @include box-shadow($kbd-box-shadow);

            kbd {
                padding: 0;
                @include font-size(100%);
                font-weight: $kbd-nested-font-weight;
                @include box-shadow(none);
            }
        }
    }

    // Blocks of code
    @if $enable-code-pre {
        pre {
            display: block;
            @include font-size($code-font-size);
            color: $pre-color;

            // Account for some code outputs that place code tags in pre tags
            code {
                padding: 0;
                @include font-size(inherit);
                color: inherit;
                background-color: transparent;
                @include border-radius(0);
            }
        }
    }
}

